@@ -54,6 +54,8 @@
 	(PokerAvatarTestCase.test37_cashOutCommit): Wrote function.
 	(PokerAvatarTestCase.requestsWithWrongSerial): Added SET_ACCOUNT
 	incorrect serial test.
+	(PokerAvatarTestCase.tourneyPlayerList): Wrote function.
+	(PokerAvatarTestCase.test38_tourneyPlayerList): Wrote function.
 
 2008-02-23  Bradley M. Kuhn  <bkuhn@ebb.org>.
 
